@@ -304,6 +304,8 @@ this. Was used when mwEmbed was going to be an extension.
 * (bug 17374) Special:Export no longer exports multiple copies of pages
 * (bug 19818) Edits to user CSS/JS subpages can now be marked as patrolled by
   users who can't edit them
+* (bug 15745) The edit summary link parser now handles mismatched brackets
+  better
 
 == API changes in 1.16 ==
 
